--- a/pages/banque-image.css
+++ b/pages/banque-image.css
@@ -2,17 +2,18 @@ body{
     margin:0px;
     background-color: rgb(78, 78, 78);
     font-family: 'Playfair Display', serif;
-    color:rgb(159, 115, 3);
+    color:rgb(204, 150, 12);
     font-weight: bold;
 }
 
 .entete{
     background-color: black;
-    color:rgb(159, 115, 3);
+    color:rgb(204, 150, 12);
     display: flex;
-    align-items: center;     /* Centre verticalement */
-    height: 100px;           /* Nécessaire pour voir l’effet */
-    border: 1px solid black; /* Pour visualiser le div */
+    align-items: center;     
+    height: 100px;        
+    border: 1px solid black; 
+    
     
 }
 .entete h1 {
@@ -23,7 +24,7 @@ body{
 
 
 .fieldset_connexion{
-    border:4px solid rgb(159, 115, 3);
+    border:4px solid rgb(204, 150, 12);
     width:300px;
     margin: 0 auto;
     margin-top:20px;
@@ -54,11 +55,11 @@ legend{
     border-radius: 5px;
 }
 .legend_connexion{
-    border: 4px solid rgb(159, 115, 3);
+    border: 4px solid rgb(204, 150, 12);
 }
 
 .legend_inscription{
-    border: 4px solid rgb(159, 115, 3);
+    border: 4px solid rgb(204, 150, 12);
 }
 
 .mdp{
@@ -87,7 +88,7 @@ legend{
 }
 
 .fieldset_inscription{
-    border:4px solid rgb(159, 115, 3);
+    border:4px solid rgb(204, 150, 12);
     width:300px;
     margin: 0 auto;
     margin-top:20px;
@@ -135,11 +136,63 @@ legend{
 }
 
 a{
-    color:rgb(159, 115, 3)
+    color:rgb(0, 0, 0)
 }
 
 .bienvenue {
     text-align: center;
     font-style: italic;
     margin-top: 10px;
+}
+
+.container-principal {
+    display: flex;
+    min-height: 500px;
+    color : black;
+}
+
+.barre-laterale {
+    width: 220px;
+    background-color: #ffffff;
+    padding: 20px;
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.bouton-deconnexion {
+    width: 100%;
+    padding: 10px;
+    background-color: grey;
+    border: 2px solid black;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    cursor: pointer;
+}
+.bouton-deconnexion:hover {
+    background-color: rgb(204, 150, 12);
+    cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+
+.liste-contacts {
+    list-style-type: none;
+    padding-left: 0 ;
+}
+
+.item-lateral {
+    display: block;
+    background-color: floralwhite;
+    padding: 12px 0; /* plus de padding horizontal */ 
+    text-decoration: none;
+    color: black;
+    border: 2px solid black;
+    transition: background-color 0.3s, color 0.3s;
+    font-weight: bold;
+    text-align: center;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.item-lateral:hover {
+    background-color: rgb(230, 220, 173);
 }
